# td

./: .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  TBChipsDisplayView.xib  TBSeatingChartCollectionViewItem.h  TBSeatingChartCollectionViewItem.m  TBSeatingChartViewController.h  TBSeatingChartViewController.m  TBSetupRoundsDetailsViewController.h  defaults.json
Art/: piranha.afdesign
Common/: CFStreamCreatePairWithUnixSocket.c  CFStreamCreatePairWithUnixSocket.h  FBKVOController.m  NSData+Delimiter.h  NSData+Delimiter.m  NSDateFormatter+ISO8601.h  NSDateFormatter+ISO8601.m  NSDictionary+Changed.h  NSDictionary+Changed.m  NSFont+LineHeight.h  NSFont+LineHeight.m  NSImage+CGImage.h  NSImage+CGImage.m  NSObject+AssociatedObject.h  NSObject+AssociatedObject.m  NSObject+FBKVOController.m  NSString+CamelCase.h  NSString+CamelCase.m  NSToolbarBadgedItem.h  NSToolbarBadgedItem.m  NSView+BackgroundColor.h  NSView+BackgroundColor.m  TBActionClockView.h  TBActionClockView.m  TBAnteTypeValueTransformer.h  TBAnteTypeValueTransformer.m  TBArrayCountTransformer.h  TBArrayCountTransformer.m  TBArrayEmptyTransformer.h  TBArrayEmptyTransformer.m  TBAuthCodeNumberFormatter.h  TBAuthCodeNumberFormatter.m  TBClockDateComponentsFormatter.h  TBClockDateComponentsFormatter.m  TBColor+CSS.h  TBColor+CSS.m  TBColor+ContrastTextColor.h  TBColor+ContrastTextColor.m  TBColorValueTransformer.h  TBColorValueTransformer.m  (+69 more)
Resources/: TBQt.qrc  defaults.json  i_chip.ai  piranha.icns  piranha_ios.ai  piranha_osx.ai  s_break.caf  s_next.caf  s_rebalance.caf  s_start.caf  s_warning.caf  tbfile.icns  tbuddy.icns  tbviewer.icns  test.pokerbuddy
TB Remote/: AppDelegate.h  AppDelegate.m  FirstViewController.h  FirstViewController.m  Info.plist  SecondViewController.h  SecondViewController.m  main.m
TB Remote.xcodeproj/: project.pbxproj
TBMac/: AppDelegate.h  AppDelegate.m  Document.h  Document.m  Info.plist  TBActionClockSegue.h  TBActionClockSegue.m  TBActionClockViewController.h  TBActionClockViewController.m  TBAuthCodeViewController.h  TBAuthCodeViewController.m  TBAuthCodeWindowController.h  TBAuthCodeWindowController.m  TBAuthsViewController.h  TBAuthsViewController.m  TBChipTableCellView.h  TBChipTableCellView.m  TBChipsDisplayViewController.h  TBChipsDisplayViewController.m  TBChipsViewController.h  TBChipsViewController.m  TBConfigurationTabViewController.h  TBConfigurationTabViewController.m  TBConfigurationViewController.h  TBConfigurationViewController.m  TBConfigurationWindowController.h  TBConfigurationWindowController.m  TBConnectToViewController.h  TBConnectToViewController.m  TBControlsViewController.m  TBFundingView.xib  TBFundingViewController.h  TBFundingViewController.m  TBLeagueViewController.h  TBLeagueViewController.m  TBMac-Info.plist  TBMacAppDelegate.h  TBMacAppDelegate.m  TBMacDocument.h  TBMacDocument.m  (+72 more)
TBPlayer/: AppDelegate.h  AppDelegate.m  Info.plist  NSFont+LineHeight.h  TBActionClockView.h  TBActionClockView.m  TBConnectToWindow.xib  TBConnectToWindowController.h  TBConnectToWindowController.m  TBControlsView.xib  TBPlayerWindow.xib  TBPlayerWindowController.h  TBPlayerWindowController.m  TBPlayerWindowController.xib  TBResizeTextField.h  TBResultsView.xib  TBResultsViewController.h  TBResultsViewController.m  main.m
TBQt/: .clang-format  .clang-tidy  SignalHandler.cpp  SignalHandler.hpp  TBActionClockWidget.cpp  TBActionClockWidget.hpp  TBActionClockWindow.cpp  TBActionClockWindow.hpp  TBAnteTypeDelegate.cpp  TBAnteTypeDelegate.hpp  TBAuthCodeDialog.cpp  TBAuthCodeDialog.hpp  TBBackgroundMonitor.cpp  TBBackgroundMonitor.hpp  TBBaseAuxiliaryWindow.cpp  TBBaseAuxiliaryWindow.hpp  TBBaseMainWindow.cpp  TBBaseMainWindow.hpp  TBBlindLevelDelegate.cpp  TBBlindLevelDelegate.hpp  TBBuddyMainWindow.cpp  TBBuddyMainWindow.hpp  TBBuddyMainWindow.ui  TBChipDisplayDelegate.cpp  TBChipDisplayDelegate.hpp  TBColorDisplayDelegate.cpp  TBColorDisplayDelegate.hpp  TBColorUtils.hpp  TBConnectToDialog.cpp  TBConnectToDialog.hpp  TBConnectToDialog.ui  TBCurrency.cpp  TBCurrency.hpp  TBDateEditDelegate.cpp  TBDateEditDelegate.hpp  TBFlowLayout.cpp  TBFlowLayout.hpp  TBFundingDetailsDelegate.cpp  TBFundingDetailsDelegate.hpp  TBFundingTypeDelegate.cpp  (+102 more)
TBRemote/: AppDelegate.h  AppDelegate.m  FirstViewController.h  FirstViewController.m  Info.plist  SecondViewController.h  SecondViewController.m  TBActionClockView.h  TBActionClockView.m  TBActionClockViewController.h  TBActionClockViewController.m  TBAppDelegate.h  TBAppDelegate.m  TBChipTableViewCell.h  TBChipTableViewCell.m  TBChipTableViewCell.xib  TBChooseColorViewController.h  TBChooseColorViewController.m  TBEditableTableViewCell.h  TBEditableTableViewCell.m  TBKVOTableViewCell.h  TBKVOTableViewCell.m  TBNotifications.h  TBPhone-Info.plist  TBPhoneLaunchScreen.storyboard  TBPlayerSeatingViewController.h  TBPlayerSeatingViewController.m  TBRemote-Info.plist  TBRemoteClockViewController.h  TBRemoteClockViewController.m  TBRemoteLaunchScreen.storyboard  TBRemoteWatchDelegate.h  TBRemoteWatchDelegate.m  TBResultsViewController.h  TBResultsViewController.m  TBSettingsViewController.h  TBSettingsViewController.m  TBSetupAutomaticPayoutViewController.h  TBSetupAutomaticPayoutViewController.m  TBSetupChipsViewController.h  (+52 more)
TBRemote.xcodeproj/: project.pbxproj
TBWatch/: Info.plist  TBPhone-Info.plist  TBRemote-Info.plist
TBWatch Extension/: ExtensionDelegate.h  ExtensionDelegate.m  Info.plist  InterfaceController.h  InterfaceController.m  NotificationController.h  NotificationController.m  PushNotificationPayload.apns  TBPhone-Info.plist  TBRemote-Info.plist
TBWin/: App.config  App.xaml  App.xaml.cs  JsonDocument.cs  MainWindow.xaml  MainWindow.xaml.cs  ObservableDictionary.cs  TBAuthCodeWindow.xaml  TBAuthCodeWindow.xaml.cs  TBConfigurationWindow.xaml  TBConfigurationWindow.xaml.cs  TBMovementWindow.xaml  TBMovementWindow.xaml.cs  TBPlanWindow.xaml  TBPlanWindow.xaml.cs  TBPlayerWindow.xaml  TBPlayerWindow.xaml.cs  TBWin.csproj  TournamentConfigSerializer.cs  TournamentDaemon.cs  TournamentSession.cs  ValueConverters.cs  (+1 more)
(+291 files in other folders)
